[package]
name = "cep"
version = "0.1.0"
edition = "2021"
description = "ComEd Electricity Price CLI"
license = "Apache-2.0"

[[bin]]
name = "cep"
path = "src/main.rs"

[dependencies]
clap          = { version = "4", features = ["derive", "env"] }
reqwest       = { version = "0.12", features = ["blocking", "json"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
serde_yaml_ng = "0.10"
chrono        = "0.4"
chrono-tz     = "0.10"
csv           = "1"
thiserror     = "2"
tokio         = { version = "1", features = ["rt", "rt-multi-thread"] }
colored_json  = "5"
